<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".GoalHandler">

    <EditText
        android:id="@+id/goalNameInput"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/input_text_design"
        android:focusable="false"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintStart_toStartOf="@+id/goalNameLabel"
        app:layout_constraintTop_toTopOf="@+id/welcomeLabel" />

    <EditText
        android:id="@+id/daysTillCompletion"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/goalNameInput"
        app:layout_constraintStart_toStartOf="@+id/goalNameInput"
        app:layout_constraintTop_toTopOf="@+id/mottoText" />

    <TextView
        android:id="@+id/goalNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="+"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:fontFamily="Arial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mottoText" />

    <TextView
        android:id="@+id/mottoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="Arial"
        android:gravity="center"
        android:text="Days till completion"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="Arial"
        android:gravity="center"
        android:text="Goal Overview"
        android:textColor="@color/fontColor"
        android:textSize="11pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />


    <View
        android:id="@+id/myRectangleView"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:background="@color/barColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/barColor"
        android:filterTouchesWhenObscured="false"
        android:fontFamily="Arial"
        android:stateListAnimator="@null"
        android:text="+ New Goal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toEndOf="@+id/mainPig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <ImageView
        android:id="@+id/mainPig"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/pig"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="320dp"
        android:layout_height="2dip"
        android:background="@color/fontColor"
        android:paddingBottom="10dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>