<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterHandler">

    <TextView
        android:id="@+id/StudentLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Arial"
        android:text="Student Loan:"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/annualIncomeLabel" />

    <EditText
        android:id="@+id/WeeklyExpensesInput"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/input_text_design"
        android:digits="0123456789."
        android:fontFamily="Arial"
        android:inputType="numberDecimal"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameInput" />

    <TextView
        android:id="@+id/WeeklyExpensesLabel"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="Arial"
        android:text="Expenses Cost:"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:layout_constraintEnd_toStartOf="@+id/WeeklyExpensesInput"
        app:layout_constraintTop_toBottomOf="@+id/fullNameLabel" />

    <EditText
        android:id="@+id/weeklyIncomeInput"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/input_text_design"
        android:digits="0123456789."
        android:fontFamily="Arial"
        android:inputType="numberDecimal"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeeklyExpensesInput" />

    <TextView
        android:id="@+id/annualIncomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="Weekly Income:\n(before Tax)"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:layout_constraintEnd_toStartOf="@+id/weeklyIncomeInput"
        app:layout_constraintTop_toBottomOf="@+id/WeeklyExpensesLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Arial"
        android:text="Password:"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel" />

    <EditText
        android:id="@+id/passwordInput"
        android:inputType="textPassword"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintStart_toEndOf="@+id/userNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/studentLoanInput" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Arial"
        android:text="Username:"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoan" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Full Name:"
        android:textColor="@color/fontColor"
        android:textSize="8pt"
        app:fontFamily="Arial"
        app:layout_constraintEnd_toStartOf="@+id/fullNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mottoText" />

    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:background="@color/barColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainPig"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/pig"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/mottoText"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Arial"
        android:text="Reach your savings goals today!"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/Register"
        android:stateListAnimator="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/barColor"
        android:filterTouchesWhenObscured="false"
        android:fontFamily="Arial"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toEndOf="@+id/mainPig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="Arial"
        android:text="Register"
        android:gravity="center"
        android:textColor="@color/fontColor"
        android:textSize="11pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />


    <View
        android:id="@+id/view2"
        android:layout_width="320dp"
        android:layout_height="2dip"
        android:background="@color/fontColor"
        android:paddingBottom="10dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <CheckBox
        android:id="@+id/studentLoanInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/StudentLoan"
        app:layout_constraintTop_toBottomOf="@+id/weeklyIncomeInput" />

</androidx.constraintlayout.widget.ConstraintLayout>